<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SnapChirp</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_friends">Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="password_hint">Enter Password</string>
    <string name="username_hint">Enter Username</string>
    <string name="login_label">LOGIN</string>
    <string name="signup_text">Don\'t Have An Account? Sign Up Now!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="sign_up_button_label">Sign Up!</string>
    <string name="signup_error_message">Please provide username, password, email</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please provide correct username and password</string>
    <string name="login_error_title">Oops!</string>
    <string name="error_title">We Are Sorry</string>
    <string name="menu_logout_label">LogOut</string>
    <string name="empty_inbox_label">No New Messages For You</string>
    <string name="empty_friend_label">You don\'t have any friend, what a loser!</string>
    <string name="menu_add_friends_label">Add Friends</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="home_town_hint">Hometown</string>
    <string name="web_address_hint">Personal Web Address</string>
    <string name="title_activity_friend_profile">Friend Profile</string>
    <string name="first_name_holder">First Name Holder</string>
    <string name="last_name_holder">Last Name Holder</string>
    <string name="hometown_holder">Hometown Holder</string>
    <string name="web_address_holder">Web Address Holder</string>
    <string name="menu_camera_label">Camera</string>
    <string name="save_gallery_error">Saving to gallery error</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_message">Choose a friend first!</string>
    <string name="menu_recipients_send">Send</string>
    <string name="title_activity_view_image">SnapChirp</string>
    <string name="subtitle">For Your Eyes Only</string>
    <string name="signup_cancel">CANCEL</string>
    <string name="push_message">"%s Chirped you!"</string>

</resources>
