<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    >
<RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                style="@style/AuthBackground"
                tools:context="com.agctonline.snapchirp.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="SnapChirp background image"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/whitebackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"
        >



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/username_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_below="@+id/usernameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/password_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:layout_below="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/email_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:id="@+id/firstNameField"
        android:layout_below="@+id/emailField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/first_name_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:id="@+id/lastNameField"
        android:layout_below="@+id/firstNameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/last_name_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:ems="10"
        android:id="@+id/homeTownField"
        android:layout_below="@+id/lastNameField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/home_town_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:ems="10"
        android:id="@+id/webAddressField"
        android:layout_below="@+id/homeTownField"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/web_address_hint"/>

    </RelativeLayout>
    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/whitebackground"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button_label"
        android:id="@+id/signUpButton"
        android:layout_below="@id/whitebackground"
        android:layout_toLeftOf="@id/buttonDivider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#250054"
        android:background="@drawable/button_custom"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"

        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_cancel"
        android:id="@+id/cancelButton"
        android:layout_alignParentRight="true"
        android:textColor="#250054"
        android:background="@drawable/button_custom"
        android:layout_below="@+id/whitebackground"
        android:layout_toRightOf="@+id/buttonDivider"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        />

</RelativeLayout>
</ScrollView>