<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AuthBackground"
                tools:context="com.agctonline.snapchirp.LoginActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="SnapChirp background image"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="60sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <RelativeLayout
        android:id="@+id/whitebackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/login_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/login_horizontal_padding"
        android:paddingRight="@dimen/login_horizontal_padding"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameField"
            android:hint="@string/username_hint"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordField"
            android:hint="@string/password_hint"
            android:layout_below="@id/usernameField"
            android:textColorHint="@color/light_gray"
            android:textSize="16sp"
             />
        </RelativeLayout>



    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_label"
        android:layout_below="@+id/whitebackground"
        android:textColor="#250054"
        android:background="@drawable/button_custom"

        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/login_vertical_padding"
        android:paddingBottom="@dimen/login_vertical_padding"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:id="@+id/signUpText"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:textSize="13sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        />

</RelativeLayout>
